# open-housing-standard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NON_GOALS.md  README.md  mkdocs.yml  mkdocs.yml.before-generated-docs  pyproject.toml
.github/ISSUE_TEMPLATE/: change-proposal.yml  specification.yml
.github/PULL_REQUEST_TEMPLATE/: specification.md
.github/workflows/: ci.yml
docs/adr/: 0002-rfc-style-standard-documents.md  0003-three-reference-sizes.md  0004-editorial-standard.md  index.md
reference-houses/: README.md
reference-houses/oh120/: README.md
reference-houses/oh150/: README.md
reference-houses/oh90/: README.md
scripts/: bootstrap-ohs-editorial.sh  bootstrap-standard.sh  fix-generated-doc-links.sh  fix-links-import.sh  generate_bom.py  generate_model_report.py  install-ohs-frontmatter-normalizer.sh  migrate-docs-tooling-to-python.sh  patch-generated-doc-links.sh  repair-adr-maintenance-method.sh  replace-docs-builder-with-link-rewrite.sh  reset-ohs-docs-tooling.sh  validate_config.py
src/ohs/: __init__.py  editorial.py  frontmatter.py  maintenance.py  validator.py
standard/: OHS-1.0.md  README.md
standard/OHS-000/: CHANGELOG.md  CHAPTER-TEMPLATE.md  DOCUMENT-LIFECYCLE.md  OHS-001-MIGRATION-CHECKLIST.md  README.md  STYLE.md  TEMPLATE.md
standard/OHS-001/: 01-introduction.md  02-scope.md  03-normative-references.md  04-terminology.md  05-design-principles.md  05-requirements.md  06-conformance.md  06-standard-architecture.md  07-conformance.md  07-versioning.md  08-governance.md  README.md  (+4 more)
tests/: test_configs.py
(+43 files in other folders)
