[project]
name = "open-housing-standard"
version = "0.1.0"
description = "An open standard for robust, repairable, accessible and technology-friendly homes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC-BY-SA-4.0" }
authors = [
  { name = "Open Housing Standard contributors" }
]
keywords = ["housing", "architecture", "bim", "ifc", "freecad", "open-standard", "universal-design"]
dependencies = [
  "pyyaml>=6.0.2",
  "jinja2>=3.1.4",
  "rich>=13.7.1",
]

[project.optional-dependencies]
bim = [
  "ifcopenshell>=0.8.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ohs]
standard_version = "0.1.0"
default_model = "oh120"

[tool.uv]
package = true

[project.scripts]
ohs-normalize-frontmatter = "ohs.frontmatter:main"
ohs-maintain = "ohs.maintenance:main"
ohs-build-docs = "ohs.docs.cli:main"
